Update Navbar & Style

--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -28,5 +28,5 @@
     "email": "Email",
     "subject": "Subject",
     "message": "Message",
-    "send-message": "SEND MESSAGE"
+    "send-message": "Send Message"
 }
