--- a/public/assets/locales/es/translation.json
+++ b/public/assets/locales/es/translation.json
@@ -28,5 +28,5 @@
     "email": "Email",
     "subject": "Asunto",
     "message": "Mensaje",
-    "send-message": "ENVIA MENSAJE"
+    "send-message": "Enviar Mensaje"
 }
