--- a/public/assets/locales/cat/translation.json
+++ b/public/assets/locales/cat/translation.json
@@ -28,5 +28,5 @@
     "email": "Email",
     "subject": "Assumpte",
     "message": "Missatge",
-    "send-message": "ENVIA MISSATGE"
+    "send-message": "Envia Missatge"
 }
