--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -10,7 +10,7 @@
     "learn-more": "Learn More",
     "visit-site": "Visit Site",
     "konecta-text": "This project was made with my group during the Web Development Course. Front-end was made in React and back-end with Spring Boot, using AWS for our servers, databases and storage.",
-    "portfolio-text": "This is my own portfolio, it was made with React, using some samples from W3Schools and Bootstrap, putting in practice my HTML, CSS, JS, & Bootstrap skiils. I've used Hostinger to host my website.",
+    "portfolio-text": "This is my own portfolio, it was made with React, using some samples from W3Schools and Bootstrap, putting in practice my HTML, CSS, JS, & Bootstrap skills. I've used Hostinger to host my website.",
     "photography-text": "This project was made for a photographer friend of mine, it's a portfolio of his work. I was done using Wordpress and Elementor's plugin, it was my first approach to this tools.",
 
     "about-first": "My name is Ignacio Albiol, I'm a game & web developer and I live in Barcelona. For the last years I've been through the process of professional reconversion, going from the educational to the programming and development sector. At first, I started learning Unity and C# on my own, and later doing a web application development intensive course full-stack profile. Right now I'm doing my first steps in the business, and willing to continue learning and imporving my knoledge in this areas.",
@@ -28,5 +28,27 @@
     "email": "Email",
     "subject": "Subject",
     "message": "Message",
-    "send-message": "Send Message"
+    "send-message": "Send Message",
+
+    "idea-title": "¿Cómo surgió la idea?",
+    "idea-konecta-1": "K0N3CT4 surge como resultado del proyecto final grupal para el curso de Desarrollo Web que finalicé en noviembre del 2023. Fue desarrollado por mí y otras 3 personas, la idea general del proyecto surgió a partir de la consigna propuesta por nuestro profesor: ¿Cómo relacionar adolescentes y cultura?",
+    "idea-konecta-2": "Esta pregunta nos ha llevado a pensar en diferentes formas de acercar la cultura a los adolescentes, teniendo en cuenta sus necesidades y restricciones. Es por esto que decidimos crear una aplicación específica para ellos, que sea práctica y sencilla, y en donde puedan encontrar eventos culturales del “underground” que sean gratuitos.",
+    "idea-konecta-3": "El proyecto recopilará información sobre estos eventos culturales y los mostrará en dos formatos, un listado con todos los detalles (descripción, tipo de evento, hora y lugar) y también en un mapa.",
+    "idea-konecta-4": "Tanto el listado como el mapa, permiten a los usuarios filtrar el contenido para encontrar de forma rápida el tipo de evento que se adapta a sus necesidades. Estos filtros se podrán personalizar al crear un usuario completando los campos de intereses.",
+    "idea-konecta-5": "A su vez, los usuarios podrán interactuar entre sí, ver los eventos a los que asisten sus amigos y desbloquear recompensas por participar en la comunidad, comentando y calificando los eventos a los que han asistido.",
+    "how-title": "¿Cómo se llevó a cabo el proyecto?",
+    "how-konecta-1": "En cuanto al proceso de desarrollo, lo primero que hemos hecho ha sido realizar un bosquejo LO-FI en Figma, tanto mobile como desktop, que luego se ha ido mejorando, agregando color y estilo.",
+    "how-konecta-2": "Por otro lado, hemos utilizando Trello para administrar nuestro flujo de trabajo y repartir las tareas, y GitHub para ayudarnos a administrar, rastrear y controlar los cambios mientras desarrollábamos la aplicación.",
+    "front-end": "Front-End",
+    "front-konecta-text": "Realizado en React, utilizando la librería Router para gestionar el tráfico de una página a la otra, y JavaScript como lenguaje principal para las funciones y componentes. Para el estilo se ha utilizado tanto CSS como Bootrsap, y para mejorar la responsividad, Media Queries. Luego hemos trasladado la build del proyecto a una instancia de EC2 de Amazon Web Services.",
+    "back-end": "Back-End",
+    "back-konecta-text": "Hemos utilizado Spring Boot para nuestra API, y en dónde hemos creado nuestros controladores, entidades y repositorios. Una vez realizada y comprobada su funcionalidad, al igual que el front-end, la hemos trasladado a una instancia EC2 de AWS mediante Apache Tomcat en formato .war.",
+    "data-base": "Base de Datos",
+    "db-konecta-text": "La base de datos fue creada primero en formato .json y luego trasladad a un RDS en Amazon Web Services. La misma se depliega en la aplicación mediante un “fetch”.",
+
+    "in-dev-konecta" : "Futuras Actualizaciones",
+    "dev-konecta-text" : "El proyecto aún se encuentra en desarrollo.........",
+
+    "colaborators-konecta" : "Colaboradores:",
+    "colaborators-text" : "lista pendiente"
 }
