Update Konecta Languages

--- a/public/assets/locales/cat/translation.json
+++ b/public/assets/locales/cat/translation.json
@@ -30,25 +30,32 @@
     "message": "Missatge",
     "send-message": "Envia Missatge",
 
-    "idea-title": "¿Cómo surgió la idea?",
-    "idea-konecta-1": "K0N3CT4 surge como resultado del proyecto final grupal para el curso de Desarrollo Web que finalicé en noviembre del 2023. Fue desarrollado por mí y otras 3 personas, la idea general del proyecto surgió a partir de la consigna propuesta por nuestro profesor: ¿Cómo relacionar adolescentes y cultura?",
-    "idea-konecta-2": "Esta pregunta nos ha llevado a pensar en diferentes formas de acercar la cultura a los adolescentes, teniendo en cuenta sus necesidades y restricciones. Es por esto que decidimos crear una aplicación específica para ellos, que sea práctica y sencilla, y en donde puedan encontrar eventos culturales del “underground” que sean gratuitos.",
-    "idea-konecta-3": "El proyecto recopilará información sobre estos eventos culturales y los mostrará en dos formatos, un listado con todos los detalles (descripción, tipo de evento, hora y lugar) y también en un mapa.",
-    "idea-konecta-4": "Tanto el listado como el mapa, permiten a los usuarios filtrar el contenido para encontrar de forma rápida el tipo de evento que se adapta a sus necesidades. Estos filtros se podrán personalizar al crear un usuario completando los campos de intereses.",
-    "idea-konecta-5": "A su vez, los usuarios podrán interactuar entre sí, ver los eventos a los que asisten sus amigos y desbloquear recompensas por participar en la comunidad, comentando y calificando los eventos a los que han asistido.",
-    "how-title": "¿Cómo se llevó a cabo el proyecto?",
-    "how-konecta-1": "En cuanto al proceso de desarrollo, lo primero que hemos hecho ha sido realizar un bosquejo LO-FI en Figma, tanto mobile como desktop, que luego se ha ido mejorando, agregando color y estilo.",
-    "how-konecta-2": "Por otro lado, hemos utilizando Trello para administrar nuestro flujo de trabajo y repartir las tareas, y GitHub para ayudarnos a administrar, rastrear y controlar los cambios mientras desarrollábamos la aplicación.",
-    "front-end": "Front-End",
-    "front-konecta-text": "Realizado en React, utilizando la librería Router para gestionar el tráfico de una página a la otra, y JavaScript como lenguaje principal para las funciones y componentes. Para el estilo se ha utilizado tanto CSS como Bootrsap, y para mejorar la responsividad, Media Queries. Luego hemos trasladado la build del proyecto a una instancia de EC2 de Amazon Web Services.",
-    "back-end": "Back-End",
-    "back-konecta-text": "Hemos utilizado Spring Boot para nuestra API, y en dónde hemos creado nuestros controladores, entidades y repositorios. Una vez realizada y comprobada su funcionalidad, al igual que el front-end, la hemos trasladado a una instancia EC2 de AWS mediante Apache Tomcat en formato .war.",
-    "data-base": "Base de Datos",
-    "db-konecta-text": "La base de datos fue creada primero en formato .json y luego trasladad a un RDS en Amazon Web Services. La misma se depliega en la aplicación mediante un “fetch”.",
+    "idea-title": "Com va sorgir la idea?",
+    "idea-konecta-1": "K0N3CT4 sorgeix com a resultat del projecte final grupal per al curs de Desenvolupament Web que vaig finalitzar el novembre del 2023. Va ser desenvolupat per mi i 3 persones més, la idea general del projecte va sorgir a partir de la consigna proposada pel nostre professor: Com relacionar adolescents i cultura?",
+    "idea-konecta-2": "Aquesta pregunta ens ha portat a pensar en diferents maneres d'apropar la cultura als adolescents, tenint en compte les seves necessitats i restriccions. És per això que decidim crear una aplicació específica per a ells, que sigui pràctica i senzilla, i on puguin trobar esdeveniments culturals de l'underground que siguin gratuïts.",
+    "idea-konecta-3": "El projecte recopilarà informació sobre aquests esdeveniments culturals i els mostrarà en dos formats, un llistat amb tots els detalls (descripció, tipus desdeveniment, hora i lloc) i també en un mapa.",
+    "idea-konecta-4": "Tant el llistat com el mapa permeten als usuaris filtrar el contingut per trobar ràpidament el tipus d'esdeveniment que s'adapta a les vostres necessitats. Aquests filtres es podran personalitzar quan creeu un usuari completant els camps d'interessos.",
+    "idea-konecta-5": "Al mateix temps, els usuaris podran interactuar entre ells, veure els esdeveniments als quals assisteixen els seus amics i desbloquejar recompenses per participar a la comunitat, comentant i qualificant els esdeveniments a què han assistit.",
+    
+    "how-title": "Com es va fer el projecte?",
+    "how-konecta-1": "Pel que fa al procés de desenvolupament, el primer que hem fet ha estat fer un esbós LO-FI a Figma, tant mobile com desktop, que després s'ha anat millorant, afegint color i estil.",
+    "how-konecta-2": "D'altra banda, hem utilitzat Trello per administrar el nostre flux de treball i repartir les tasques, i GitHub per ajudar-nos a administrar, rastrejar i controlar els canvis mentre desenvolupàvem l'aplicació.",
+    "front-konecta-text": "Realitzat a React, utilitzant la llibreria Router per gestionar el trànsit d'una pàgina a l'altra, i JavaScript com a llenguatge principal per a les funcions i els components. Per a l'estil s'han utilitzat tant CSS com Bootrsap, i per millorar la responsivitat, Media Queries. També hem posat molt èmfasi que l'aplicació sigui accessible per a tota mena d'usuaris, amb una mitjana d'accessibilitat del 98%. Per desplegar-ho, hem traslladat la build del projecte a una instància d'EC2 d'Amazon Web Services.",
+    "back-konecta-text": "Hem utilitzat Spring Boot per a la nostra API, i on hem creat els nostres controladors, entitats i repositoris. Un cop realitzada i comprovada la seva funcionalitat, igual que el front-end, l'hem traslladada a una instància EC2 d'AWS mitjançant Apache Tomcat en format .war.",
+    "data-base": "Base de Dades",
+    "db-konecta-text": "La base de dades va ser creada en principi en format .json i després traslladada a un RDS a Amazon Web Services. Aquesta es desplega a l'aplicació mitjançant un fetch i és l'encarregada de mostrar-nos tota la informació de cada esdeveniment.",
 
-    "in-dev-konecta" : "Futuras Actualizaciones",
-    "dev-konecta-text" : "El proyecto aún se encuentra en desarrollo.........",
+    "in-dev-konecta" : "Futures Actualitzacions",
+    "dev-konecta-text" : "El projecte encara es troba en fase de desenvolupament i compta amb molt de potencial per agregar diferents features. Aquestes són les funcionalitats que s'afegiran properament:",
+    "dev-konecta-item1" : "Pantalla d'edició de perfil d'usuari.",
+    "dev-konecta-item2" : "Creació de perfil d'Administrador d'esdeveniments.",
+    "dev-konecta-item3" : "Mapa funcional.",
+    "dev-konecta-item4" : "Possibilitat que l'usuari pugui marcar l'assistència a un esdeveniment, i que aquest aparegui al seu perfil.",
+    "dev-konecta-item5" : "Sistema de qualificació per als esdeveniments (like i dislike).",
+    "dev-konecta-item6" : "Sistema de interacció entre usuaris.",
+    "dev-konecta-item7" : "Sistema de recompenses per participació a la comunitat (Tokens).",
 
-    "colaborators-konecta" : "Colaboradores:",
-    "colaborators-text" : "lista pendiente"
+    "colaborators-konecta" : "Col·laboradors:",
+
+    "skills-used" : "Eines utilitzades:"
 }
