--- a/public/assets/locales/es/translation.json
+++ b/public/assets/locales/es/translation.json
@@ -36,19 +36,26 @@
     "idea-konecta-3": "El proyecto recopilará información sobre estos eventos culturales y los mostrará en dos formatos, un listado con todos los detalles (descripción, tipo de evento, hora y lugar) y también en un mapa.",
     "idea-konecta-4": "Tanto el listado como el mapa, permiten a los usuarios filtrar el contenido para encontrar de forma rápida el tipo de evento que se adapta a sus necesidades. Estos filtros se podrán personalizar al crear un usuario completando los campos de intereses.",
     "idea-konecta-5": "A su vez, los usuarios podrán interactuar entre sí, ver los eventos a los que asisten sus amigos y desbloquear recompensas por participar en la comunidad, comentando y calificando los eventos a los que han asistido.",
+    
     "how-title": "¿Cómo se llevó a cabo el proyecto?",
     "how-konecta-1": "En cuanto al proceso de desarrollo, lo primero que hemos hecho ha sido realizar un bosquejo LO-FI en Figma, tanto mobile como desktop, que luego se ha ido mejorando, agregando color y estilo.",
     "how-konecta-2": "Por otro lado, hemos utilizando Trello para administrar nuestro flujo de trabajo y repartir las tareas, y GitHub para ayudarnos a administrar, rastrear y controlar los cambios mientras desarrollábamos la aplicación.",
-    "front-end": "Front-End",
-    "front-konecta-text": "Realizado en React, utilizando la librería Router para gestionar el tráfico de una página a la otra, y JavaScript como lenguaje principal para las funciones y componentes. Para el estilo se ha utilizado tanto CSS como Bootrsap, y para mejorar la responsividad, Media Queries. Luego hemos trasladado la build del proyecto a una instancia de EC2 de Amazon Web Services.",
-    "back-end": "Back-End",
+    "front-konecta-text": "Realizado en React, utilizando la librería Router para gestionar el tráfico de una página a la otra, y JavaScript como lenguaje principal para las funciones y componentes. Para el estilo se ha utilizado tanto CSS como Bootrsap, y para mejorar la responsividad, Media Queries. También hemos hecho mucho hincapié en que la aplicación sea accesible para todo tipo de usuarios, con un promedio de accesibilidad de un 98%. Para desplegarlo, hemos trasladado la build del proyecto a una instancia de EC2 de Amazon Web Services.",
     "back-konecta-text": "Hemos utilizado Spring Boot para nuestra API, y en dónde hemos creado nuestros controladores, entidades y repositorios. Una vez realizada y comprobada su funcionalidad, al igual que el front-end, la hemos trasladado a una instancia EC2 de AWS mediante Apache Tomcat en formato .war.",
     "data-base": "Base de Datos",
-    "db-konecta-text": "La base de datos fue creada primero en formato .json y luego trasladad a un RDS en Amazon Web Services. La misma se depliega en la aplicación mediante un “fetch”.",
+    "db-konecta-text": "La base de datos fue creada primero en formato .json y luego trasladada a un RDS en Amazon Web Services. La misma se depliega en la aplicación mediante un “fetch” y es la encargada de mostrarnos toda la información de cada evento.",
 
     "in-dev-konecta" : "Futuras Actualizaciones",
-    "dev-konecta-text" : "El proyecto aún se encuentra en desarrollo.........",
+    "dev-konecta-text" : "El proyecto aún se encuentra en fase de desarrollo y cuenta con mucho potencial para agregar diferentes features. Estas son las funcionalidades que se agregarán próximamente:",
+    "dev-konecta-item1" : "Pantalla de edición de perfil de usuario.",
+    "dev-konecta-item2" : "Creación de perfil de Administrador de eventos.",
+    "dev-konecta-item3" : "Mapa funcional.",
+    "dev-konecta-item4" : "Posibilidad de que el usuario pueda marcar la asistencia a un evento, y que este aparezca en su perfil.",
+    "dev-konecta-item5" : "Sistema de calificación para los eventos (like y dislike).",
+    "dev-konecta-item6" : "Sistema de interacción entre usuarios.",
+    "dev-konecta-item7" : "Sistema de recompensas por participación en la comunidad (Tokens).",
 
     "colaborators-konecta" : "Colaboradores:",
-    "colaborators-text" : "lista pendiente"
+
+    "skills-used" : "Herramientas utilizadas:"
 }
