--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -30,25 +30,32 @@
     "message": "Message",
     "send-message": "Send Message",
 
-    "idea-title": "¿Cómo surgió la idea?",
-    "idea-konecta-1": "K0N3CT4 surge como resultado del proyecto final grupal para el curso de Desarrollo Web que finalicé en noviembre del 2023. Fue desarrollado por mí y otras 3 personas, la idea general del proyecto surgió a partir de la consigna propuesta por nuestro profesor: ¿Cómo relacionar adolescentes y cultura?",
-    "idea-konecta-2": "Esta pregunta nos ha llevado a pensar en diferentes formas de acercar la cultura a los adolescentes, teniendo en cuenta sus necesidades y restricciones. Es por esto que decidimos crear una aplicación específica para ellos, que sea práctica y sencilla, y en donde puedan encontrar eventos culturales del “underground” que sean gratuitos.",
-    "idea-konecta-3": "El proyecto recopilará información sobre estos eventos culturales y los mostrará en dos formatos, un listado con todos los detalles (descripción, tipo de evento, hora y lugar) y también en un mapa.",
-    "idea-konecta-4": "Tanto el listado como el mapa, permiten a los usuarios filtrar el contenido para encontrar de forma rápida el tipo de evento que se adapta a sus necesidades. Estos filtros se podrán personalizar al crear un usuario completando los campos de intereses.",
-    "idea-konecta-5": "A su vez, los usuarios podrán interactuar entre sí, ver los eventos a los que asisten sus amigos y desbloquear recompensas por participar en la comunidad, comentando y calificando los eventos a los que han asistido.",
-    "how-title": "¿Cómo se llevó a cabo el proyecto?",
-    "how-konecta-1": "En cuanto al proceso de desarrollo, lo primero que hemos hecho ha sido realizar un bosquejo LO-FI en Figma, tanto mobile como desktop, que luego se ha ido mejorando, agregando color y estilo.",
-    "how-konecta-2": "Por otro lado, hemos utilizando Trello para administrar nuestro flujo de trabajo y repartir las tareas, y GitHub para ayudarnos a administrar, rastrear y controlar los cambios mientras desarrollábamos la aplicación.",
-    "front-end": "Front-End",
-    "front-konecta-text": "Realizado en React, utilizando la librería Router para gestionar el tráfico de una página a la otra, y JavaScript como lenguaje principal para las funciones y componentes. Para el estilo se ha utilizado tanto CSS como Bootrsap, y para mejorar la responsividad, Media Queries. Luego hemos trasladado la build del proyecto a una instancia de EC2 de Amazon Web Services.",
-    "back-end": "Back-End",
-    "back-konecta-text": "Hemos utilizado Spring Boot para nuestra API, y en dónde hemos creado nuestros controladores, entidades y repositorios. Una vez realizada y comprobada su funcionalidad, al igual que el front-end, la hemos trasladado a una instancia EC2 de AWS mediante Apache Tomcat en formato .war.",
-    "data-base": "Base de Datos",
-    "db-konecta-text": "La base de datos fue creada primero en formato .json y luego trasladad a un RDS en Amazon Web Services. La misma se depliega en la aplicación mediante un “fetch”.",
+    "idea-title": "How did the idea come about?",
+    "idea-konecta-1": "K0N3CT4 arises as a result of the final group project for the Web Development course that I completed in November 2023. It was developed by me and 3 other people, the general idea of the project came from the slogan proposed by our teacher: How to relate teenagers and culture?",
+    "idea-konecta-2": "This question has led us to think about different ways to bring culture closer to teenagers, taking into account their needs and restrictions. This is why we decided to create a specific application for them, which is practical and simple, and where they can find “underground” cultural events that are free.",
+    "idea-konecta-3": "The project will collect information about these cultural events and display them in two formats, a list with all the details (description, type of event, time and place) and also on a map.",
+    "idea-konecta-4": "Both the list and the map allow users to filter the content to quickly find the type of event that suits their needs. These filters can be customized when creating a user by completing the interest fields.",
+    "idea-konecta-5": "At the same time, users will be able to interact with each other, see the events their friends are attending and unlock rewards for participating in the community, commenting and rating the events they have attended.",
+    
+    "how-title": "How was the project carried out?",
+    "how-konecta-1": "Regarding the development process, the first thing we have done was make a LO-FI sketch in Figma, both mobile and desktop, which has then been improved, adding color and style.",
+    "how-konecta-2": "On the other hand, we used Trello to manage our workflow and distribute tasks, and GitHub to help us manage, track and control changes while developing the application.",
+    "front-konecta-text": "Made in React, using the Router library to manage traffic from one page to the other, and JavaScript as the main language for functions and components. For the style, both CSS and Bootrsap have been used, and to improve responsiveness, Media Queries. We have also placed great emphasis on making the application accessible to all types of users, with an average accessibility of 98%. To deploy it, we have moved the project build to an Amazon Web Services EC2 instance.",
+    "back-konecta-text": "We have used Spring Boot for our API, and where we have created our controllers, entities and repositories. Once its functionality has been created and tested, as well as the front-end, we have moved it to an AWS EC2 instance using Apache Tomcat in .war format.",
+    "data-base": "Data Base",
+    "db-konecta-text": "The database was first created in .json format and then moved to an RDS on Amazon Web Services. It is displayed in the application using a “fetch” and is responsible for showing us all the information about each event.",
 
-    "in-dev-konecta" : "Futuras Actualizaciones",
-    "dev-konecta-text" : "El proyecto aún se encuentra en desarrollo.........",
+    "in-dev-konecta" : "Future Updates",
+    "dev-konecta-text" : "The project is still in the development phase and has a lot of potential to add different features. These are the features that will be added soon:",
+    "dev-konecta-item1" : "Registered user edit profile screen.",
+    "dev-konecta-item2" : "Creation of Super User profile.",
+    "dev-konecta-item3" : "Functional map.",
+    "dev-konecta-item4" : "Possibility for the user to mark attendance at an event, and for it to appear in their profile.",
+    "dev-konecta-item5" : "Rating system for events (like and dislike).",
+    "dev-konecta-item6" : "User interaction system.",
+    "dev-konecta-item7" : "Reward system for participation in the community (Tokens).",
 
-    "colaborators-konecta" : "Colaboradores:",
-    "colaborators-text" : "lista pendiente"
+    "colaborators-konecta" : "Collaborators:",
+
+    "skills-used" : "Used tools:"
 }
